- deepecg debug - cross-validation splitting code

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,6 @@
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.abspath(os.getcwd())))\n",
     "from kardioml.data.format_data_physionet_2020 import FormatDataPhysionet2020\n",
-    "from kardioml.data.format_data_zheng_2020 import FormatDataZheng2020\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -52,11 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='A')\n",
@@ -76,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -108,9 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='C')\n",
@@ -130,9 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='D')\n",
@@ -152,9 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='E')\n",
@@ -174,9 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='F')\n",
