added batchnorm to the stem layers

--- a/notebooks/error_analysis.ipynb
+++ b/notebooks/error_analysis.ipynb
@@ -2,47 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/dmitriishubin/Desktop/physionet-challenge-2020\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "TensorBoard 1.15.0 at http://rit-XPS-15-9500:6006/ (Press CTRL+C to quit)\n",
-      "^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#### insert the name of the last run\n",
     "!tensorboard --logdir=runs/May11_01-21-42_dmitrii"
@@ -50,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,18 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dmitriishubin/Desktop/physionet-challenge-2020/utils/KPI_plots.py:54: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Main processing pipeline\n",
     "scores_errors = np.array([])\n",
@@ -213,25 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-73b21cc80c72>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-73b21cc80c72>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print('Metric for dataset A: 'competition_metric.compute(labels, preds))\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Metric for dataset A: 'competition_metric.compute(labels, preds))"
+    "print('Metric for dataset A: ',competition_metric.compute(labels, preds))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,33 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predictions:  [-7.87102508e-08 -1.06736738e-11 -1.55952414e-17 -2.33664234e-11\n",
-      " -1.33120404e-10 -6.44375291e-08 -3.14574755e-11 -2.11950519e-05\n",
-      " -1.76306276e-08 -1.45609177e-10 -8.04824936e-08 -3.31910644e-15\n",
-      " -4.20201195e-06 -1.30721836e-13 -2.53869176e-10 -2.83426442e-11\n",
-      " -3.73308584e-09 -2.26913453e-12 -1.76738264e-38 -3.29476370e-06\n",
-      " -2.23708483e-08  1.31130219e-06 -1.26122125e-11 -4.67066483e-38\n",
-      " -5.08948226e-08 -2.30375302e-11 -7.60597565e-38]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_record(record):\n",
     "    \n",
@@ -295,11 +224,104 @@
     "        ax.plot(ecg[:,i]+500*i)\n",
     "    plt.show()\n",
     "    \n",
-    "    print('Predictions: ',np.array(meta['labels_training_merged']) - np.array(pred))\n",
+    "    print('Predictions: ',np.array(pred))\n",
     "    #print('Label:       ',meta['labels_training_merged'])\n",
-    "    return 0\n",
+    "    return np.array(pred)\n",
     "\n",
-    "plot_record(record=records[0])"
+    "record = records[0]\n",
+    "\n",
+    "pred = plot_record(record=record)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(pred == np.max(pred))[0][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate a competition score across all datasets + joint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "postproc = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEBUG_PATH = './data/CV_debug/'\n",
+    "DATASETS = ['A','B','D','E']\n",
+    "\n",
+    "for dataset in DATASETS:\n",
+    "    list_records = [i[:-5] for i in os.listdir(f'./data/CV_debug/{dataset}/') if i.find('.json')!=-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = []\n",
+    "labels = []\n",
+    "\n",
+    "for record in list_records:\n",
+    "    \n",
+    "    if record[0] == 'A':\n",
+    "        data_folder = 'A'\n",
+    "\n",
+    "    elif record[0] == 'Q':\n",
+    "        data_folder = 'B'\n",
+    "\n",
+    "    elif record[0] == 'I':\n",
+    "        data_folder = 'C'\n",
+    "\n",
+    "    elif record[0] == 'S':\n",
+    "        data_folder = 'D'\n",
+    "\n",
+    "    elif record[0] == 'H':\n",
+    "        data_folder = 'E'\n",
+    "\n",
+    "    elif record[0] == 'E':\n",
+    "        data_folder = 'F'\n",
+    "    \n",
+    "    pred_folder = f'./data/CV_debug/{data_folder}/'\n",
+    "    data_folder = f'./data/{data_folder}/formatted/'\n",
+    "    \n",
+    "    \n",
+    "    label = load_label(data_folder,record)\n",
+    "    label = label['labels_training_merged']\n",
+    "    \n",
+    "    pred = load_label(pred_folder,record)\n",
+    "    pred = pred['predicted_label']\n",
+    "    \n",
+    "    label, pred = competition_metric.find_opt_thresold(np.array(label).reshape(1,-1), np.array(pred).reshape(1,-1))\n",
+    "    \n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred"
    ]
   },
   {
