fixed a bug for gpu definition

--- a/notebooks/error_analysis.ipynb
+++ b/notebooks/error_analysis.ipynb
@@ -43,6 +43,7 @@
     "import os\n",
     "\n",
     "from metrics import Metric\n",
+    "from postprocessing import PostProcessing\n",
     "from utils.KPI_plots import plot_confusion_matrix"
    ]
   },
@@ -87,7 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "competition_metric = Metric()"
+    "competition_metric = Metric()\n",
+    "postprocessing = PostProcessing()"
    ]
   },
   {
